Updated portfolio content and styling

--- a/projects.html
+++ b/projects.html
@@ -121,7 +121,7 @@
             <i class="fas fa-award deck-icon"></i>
             <div>
               <h4>Project Award</h4>
-              <span>Algo Gladiators</span>
+              <span>AWS</span>
             </div>
           </div>
         </div>
@@ -156,8 +156,8 @@
           <div class="deck-info">
             <i class="fas fa-trophy deck-icon"></i>
             <div>
-              <h4>Hackathon</h4>
-              <span>Winner</span>
+              <h4>UI/UX</h4>
+              <span>ProjectSubmission</span>
             </div>
           </div>
         </div>
