--- a/skills.html
+++ b/skills.html
@@ -6,6 +6,7 @@
   <title>Kareem Basha | Skills</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="skills.css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
   <div id="preloader">
