Updated projects.html content

--- a/projects.html
+++ b/projects.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="projects.css">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
-
 </head>
 <body>
+  
   <div class="cert-focus" id="certFocus">
-  <img id="certImage" src="" alt="Certificate">
-</div>
+    <img id="certImage" src="" alt="Certificate">
+  </div>
 
   <div id="preloader">
     <div class="loader-content">
@@ -37,7 +37,7 @@
         <li><a class="nav-link" href="aboutMe.html">About Me</a></li>
         <li><a class="nav-link" href="skills.html">Skills</a></li>
         <li><a class="nav-link active" href="projects.html">Projects</a></li>
-         <li><a class="nav-link active" href="contact.html">Contact</a></li>
+        <li><a class="nav-link" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </nav>
@@ -51,6 +51,7 @@
       </div>
 
       <div class="unique-grid">
+        
         <div class="lens-card">
           <div class="lens-bg" style="background: linear-gradient(45deg, #0f172a, #1e1b4b);">
              <i class="fas fa-chess-board bg-icon"></i>
@@ -69,25 +70,6 @@
             </div>
           </div>
         </div>
-
-        <div class="lens-card">
-          <div class="lens-bg" style="background: linear-gradient(45deg, #022c22, #064e3b);">
-             <i class="fas fa-leaf bg-icon"></i>
-          </div>
-          <div class="lens-overlay glass-effect">
-            <div class="lens-header">
-              <h3>AgriTech Forecast</h3>
-              <div class="tags"><span>Python</span><span>ML</span></div>
-            </div>
-            <div class="lens-body">
-              <p>AI-powered crop prediction system analyzing soil & weather data.</p>
-              <div class="lens-actions">
-                 <a href="#" class="btn-lens outline">View Code <i class="fab fa-github"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
         <div class="lens-card">
           <div class="lens-bg" style="background: linear-gradient(45deg, #312e81, #4338ca);">
              <i class="fas fa-chart-line bg-icon"></i>
@@ -105,6 +87,26 @@
             </div>
           </div>
         </div>
+
+        <div class="lens-card">
+          <div class="lens-bg" style="background: linear-gradient(45deg, #4c1d95, #d946ef);">
+             <i class="fas fa-user-astronaut bg-icon"></i>
+          </div>
+          <div class="lens-overlay glass-effect">
+            <div class="lens-header">
+              <h3>My Portfolio</h3>
+              <div class="tags"><span>HTML/CSS</span><span>JS</span></div>
+            </div>
+            <div class="lens-body">
+              <p>The immersive 3D portfolio website you are currently viewing, featuring interactive animations and holographic UI.</p>
+              <div class="lens-actions">
+                 <a href="https://kareem123-d.github.io/portfolio/" target="_blank" class="btn-lens">Live Demo <i class="fas fa-external-link-alt"></i></a>
+                 <a href="https://github.com/kareem123-d/portfolio" target="_blank" class="btn-lens outline">Code <i class="fab fa-github"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </section>
 
