Updated project: BookMyShow clone using Lovable and Supabase AI

--- a/projects.html
+++ b/projects.html
@@ -70,23 +70,36 @@
             </div>
           </div>
         </div>
-        <div class="lens-card">
-          <div class="lens-bg" style="background: linear-gradient(45deg, #312e81, #4338ca);">
-             <i class="fas fa-chart-line bg-icon"></i>
-          </div>
-          <div class="lens-overlay glass-effect">
-            <div class="lens-header">
-              <h3>Finance Tracker</h3>
-              <div class="tags"><span>Spring Boot</span><span>React</span></div>
-            </div>
-            <div class="lens-body">
-              <p>Personal finance dashboard with expense tracking and graphs.</p>
-              <div class="lens-actions">
-                 <a href="#" class="btn-lens outline">View Code <i class="fab fa-github"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="lens-card">
+  <div class="lens-bg" style="background: linear-gradient(45deg, #312e81, #4338ca);">
+     <i class="fas fa-ticket-alt bg-icon"></i>
+  </div>
+
+  <div class="lens-overlay glass-effect">
+    <div class="lens-header">
+      <h3>BookMyShow Clone</h3>
+      <div class="tags">
+        <span>Lovable</span>
+        <span>Supabase</span>
+        <span>AI</span>
+      </div>
+    </div>
+
+    <div class="lens-body">
+      <p>
+        A BookMyShow-style ticket booking application built using Lovable AI
+        with Supabase for authentication, database, and backend services.
+      </p>
+
+      <div class="lens-actions">
+        <a href="https://bookmyshowcloneapp.lovable.app" target="_blank" class="btn-lens">
+          Live Demo <i class="fas fa-external-link-alt"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+
 
         <div class="lens-card">
           <div class="lens-bg" style="background: linear-gradient(45deg, #4c1d95, #d946ef);">
